fix the bug on mobil ver on overlap

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,6 +3,8 @@
         display: flex;
         min-height: 30vh;
         max-height: 30vh;
+        padding: auto;
+        margin: 4vh;
         justify-content: center;
         align-items: center;
         text-align: center;
